fixed splash screen added fade in effect on text

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,20 +4,20 @@ title: Timothy Voice
 
 <div class="row">
   <div id="splash" class="small-12 medium-12 large-12 columns branding">
-    <h1 class="branding-title">
-      Timothy Voice
+    <div class="fixer">
+      <h1 class="branding-title">
+      Timothy <br> <span class="indent">Voice</span>
     </h1>
     <p class="branding-byline">
       concept code content
     </p>
+    </div>
   </div><!-- Branding -->
 </div>
 
 <div class="row">
   <div class="small-12 medium-12 large-12 columns projects">
-    <h2 class="projects-title">
-      Projects
-    </h2>
+    <h2 class="projects-title"></h2>
     
     <ul class="example-orbit" data-orbit>
       <li>
