--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,7 +11,7 @@
   </head>
   
   <body class="<%= page_classes %> clearfix">
-
+    <div id="mask"></div>
     <%= yield %>
 
       <div class="bottom-fixed">
@@ -27,8 +27,9 @@
         <!-- Right Nav Section -->
         <ul class="right">
       <li><a href="#">github</a></li>
-      <li><a href="#">playbook</a></li>
       <li><a href="#">twitter</a></li>
+      <li class="divider"></li>
+      <li><a href="#">playbook</a></li>
     </ul>
     
         <!-- Left Nav Section -->
