added sticky js to project description

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,7 +15,7 @@
     <%= yield %>
 
       <div class="bottom-fixed">
-        <nav class="top-bar sticky" data-topbar>
+        <nav class="top-bar" data-topbar>
         <ul class="title-area">
           <li class="name">
             <h1><a href="#"></a></h1>
