--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,30 +15,18 @@ title: Timothy Voice
   </div><!-- Branding -->
 </div>
 
-<div class="row">
-  <div class="small-12 medium-12 large-12 columns projects">
+<div class="row projects">
+  <div class="small-12 medium-12 large-12 columns projects-container">
     <h2 class="projects-title"></h2>
-    
-    <ul class="example-orbit" data-orbit>
-      <li>
-        <img src="http://placehold.it/1200x600/A92B48/fff" alt="slide 1" />
-        <div class="orbit-caption">
-          Caption One.
-        </div>
-      </li>
-      <li>
-        <img src="http://placehold.it/1200x600/EE964D/fff" alt="slide 2" />
-        <div class="orbit-caption">
-          Caption Two.
-        </div>
-      </li>
-      <li>
-        <img src="http://placehold.it/1200x600/FDC43D/fff" alt="slide 3" />
-        <div class="orbit-caption">
-          Caption Three.
-        </div>
-      </li>
-    </ul>
+  
+    <div class="show-for-medium-up medium-4 large-4 columns projects-summary">
+      <p class="">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, molestias, error dicta earum sed ipsum velit blanditiis provident eveniet et.
+      </p>
+    </div>
+    <div class="small-12 medium-8 large-8 columns">
+      <img src="http://placehold.it/600x300" alt="">
+    </div>
 
   </div><!-- projects -->
 </div>
