project teaser styles

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,49 +1,62 @@
 ---
 title: Timothy Voice
 ---
-
-<div class="row">
-  <div id="splash" class="small-12 medium-12 large-12 columns branding">
-    <div class="fixer">
-      <h1 class="branding-title">
-      Timothy <br> <span class="indent">Voice</span>
-    </h1>
-    <p class="branding-byline">
-      concept code content
-    </p>
-    </div>
-  </div><!-- Branding -->
+<div class="branding-band">
+  <div class="row">
+    <div id="splash" class="small-12 medium-12 large-12 columns branding">
+      <div class="fixer">
+        <h1 class="branding-title">
+        Timothy <br> <span class="indent">Voice</span>
+      </h1>
+      <p class="branding-byline">
+        concept code content
+      </p>
+      </div>
+    </div><!-- Branding -->
+  </div>
 </div>
 
-<div class="row projects">
-  <div class="small-12 medium-12 large-12 columns projects-container">
-    <h2 class="projects-title"></h2>
-  
-    <div class="projects-single">
-      <div class="projects-single-container clearfix">
-        <div class="show-for-medium-up medium-4 large-4 columns projects-summary">
-          <p class="">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, molestias, error dicta earum sed ipsum velit blanditiis provident eveniet et.
-          </p>
-        </div><!-- projects-summary -->
-        <div class="small-12 medium-8 large-8 columns">
-          <img src="http://placehold.it/600x300" alt="">
+<div class="projects-band">
+  <div class="row projects">
+    <div class="small-12 medium-12 large-12 columns projects-container">
+      <h2 class="projects-title"></h2>
+    
+      <div class="projects-single">
+        <div class="projects-single-container clearfix">
+          <div class="show-for-medium-up medium-4 large-4 columns projects-summary">
+            <h3 class="projects-single-title">
+              Great Green Sources
+            </h3>
+            <p class="projects-single-teaser">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, molestias, error dicta earum sed ipsum velit blanditiis provident eveniet et.
+            </p>
+            <a href="#" class="small secondary button">View Project</a>
+          </div><!-- projects-summary -->
+          <div class="small-12 medium-8 large-8 columns">
+            <%= image_tag 'greatgreensources_full_mockup.png'  %> 
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="projects-single-container clearfix">
-      <div class="show-for-medium-up medium-4 large-4 columns projects-summary">
-        <p class="">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, molestias, error dicta earum sed ipsum velit blanditiis provident eveniet et.
-        </p>
-      </div><!-- projects-summary -->
-      <div class="small-12 medium-8 large-8 columns">
-        <img src="http://placehold.it/600x300" alt="">
+      <div class="projects-single">
+        <div class="projects-single-container clearfix">
+          <div class="show-for-medium-up medium-4 large-4 columns projects-summary">
+            <h3 class="projects-single-title">
+              Octave Journal
+            </h3>
+            <p class="projects-single-teaser">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, molestias, error dicta earum sed ipsum velit blanditiis provident eveniet et.
+            </p>
+            <a href="#" class="small secondary button">View Project</a>
+          </div><!-- projects-summary -->
+          <div class="small-12 medium-8 large-8 columns">
+            <%= image_tag 'octavejournal_full_mockup.png'  %> 
+          </div>
+        </div>
       </div>
-    </div>
 
-  </div><!-- projects -->
+    </div><!-- projects -->
+  </div>
 </div>
 
 <div class="row">
@@ -52,7 +65,7 @@ title: Timothy Voice
       About
     </h2>
     <p class="about-body">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, dolorum, nobis repudiandae exercitationem ratione omnis asperiores aliquid atque molestias amet quis assumenda enim tenetur facilis provident nemo totam voluptatibus quam aliquam quo porro est illo sequi excepturi fugiat explicabo qui voluptatem quae error officiis labore laborum vel aperiam perferendis minus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, ipsum tempora placeat non veritatis odio dolorum est obcaecati vel ut libero odit enim eligendi. Nam, commodi, omnis, vero dolores ea quaerat minus suscipit dolor assumenda fugit laborum voluptates ut placeat accusamus eligendi. Quas quia laudantium quidem nam eos? Vitae, numquam, dignissimos, nam, fugiat sunt blanditiis illum tempora eligendi odit quam neque deleniti saepe Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, laboriosam, necessitatibus illo ratione quaerat impedit deserunt reprehenderit consequatur est doloribus fuga eius quod officia nulla sapiente maxime cumque atque amet dolor nesciunt quisquam aspernatur perspiciatis eaque eum ipsam! Rerum, doloribus non eveniet illum repellendus quo placeat quam doloremque voluptates eius maxime molestias nisi debitis quae dolor officia dicta dignissimos ea minima nemo suscipit. Debitis, reprehenderit, corporis iusto maxime officiis repellendus voluptates perspiciatis quibusdam temporibus sequi illum distinctio similique quam dolores fuga possimus enim mollitia magnam labore id aliquam porro voluptatem laudantium animi repellat saepe quasi provident iste ab accusamus nisi voluptatum adipisci vitae. Sit, nobis, unde, nihil libero suscipit officiis facilis maxime voluptas quo ipsam itaque possimus distinctio eius rem officia earum beatae. Dolor, fugit, eius, obcaecati praesentium eligendi reprehenderit iure quam veritatis assumenda dolorum quidem suscipit deserunt mollitia vel repudiandae! Est, nostrum amet aspernatur dolore quidem quo excepturi ducimus eligendi voluptatum accusantium necessitatibus impedit doloribus eos dicta temporibus illum minima libero quia. Molestiae, perspiciatis a totam praesentium fuga architecto culpa labore quisquam ad ducimus sequi voluptatem eaque dignissimos veniam quos vel rem non placeat iure illo id consectetur dicta unde consequatur distinctio laborum numquam earum dolore nesciunt perferendis reiciendis! perferendis unde quis quidem ut adipisci voluptates eum odio? Commodi, perferendis, harum quia dolorem explicabo magni sint! Illum quis reiciendis ipsam cupiditate ducimus sunt facilis nemo? Amet, odio dicta ea quibusdam cumque veniam minus quaerat assumenda illo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, et ad odit impedit omnis aspernatur quibusdam tempore? Modi, explicabo, mollitia odit tempora sequi porro adipisci odio dolorem aliquid blanditiis voluptates ducimus ipsum magnam iste perspiciatis maxime in amet nihil esse ut! Voluptatum, voluptatem, laudantium in ex maiores dolor voluptates odit.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, dolorum, nobis repudiandae exercitationem ratione omnis asperiores aliquid atque molestias amet quis assumenda enim tenetur facilis provident nemo totam voluptatibus quam aliquam quo porro est illo sequi excepturi fugiat explicabo qui voluptatem quae error officiis labore laborum vel aperiam perferendis minus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, ipsum tempora placeat non veritatis odio dolorum est obcaecati vel ut libero odit enim eligendi.
     </p>
   </div><!-- About -->
 </div>
