--- a/source/stylesheets/partials/_base.scss
+++ b/source/stylesheets/partials/_base.scss
@@ -30,7 +30,7 @@ hr {
   z-index: 0;
 }
 
-.projects-container {
+.projects-container, .about {
   background: #fff;
   padding-top: 3rem;
 }
@@ -41,6 +41,15 @@ hr {
     left:0; 
     right:0; 
     bottom:0; 
-    background-color:white; 
+    background-color: $branding-color; 
     z-index:99;
+}
+
+#splash {
+  background: $branding-color;
+}
+
+.branding-band {
+  background: $branding-color;
+  width: 100%;
 }
