--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,33 +13,10 @@
   </head>
   
   <body class="<%= page_classes %> clearfix">
-    <div id="mask"></div>
+    
     <%= yield %>
 
-      <div class="bottom-fixed">
-        <nav class="top-bar" data-topbar>
-        <ul class="title-area">
-          <li class="name">
-            <h1><a href="#"></a></h1>
-          </li>
-          <li class="toggle-topbar menu-icon"><a href="#"></a></li>
-        </ul>
-    
-      <section class="top-bar-section">
-        <!-- Right Nav Section -->
-        <ul class="right">
-      <li><a href="#">github</a></li>
-      <li><a href="#">twitter</a></li>
-      <li class="divider"></li>
-      <li><a href="#">playbook</a></li>
-    </ul>
-    
-        <!-- Left Nav Section -->
-        <ul class="left">
-        </ul>
-      </section>
-    </nav>
-      </div>
+    <%= partial "navigation" %>  
 
     <%= javascript_include_tag  "all", "app" %>
   </body>
