added color bands for projects

--- a/source/stylesheets/modules/_variables.scss
+++ b/source/stylesheets/modules/_variables.scss
@@ -29,6 +29,8 @@
 
 $branding-color: hsla(202, 89, 58%, 1);
 // $branding-color: hsla(209, 32, 59%, 1);
+$octavejournal-color: hsla(229, 43, 39%, 1);
+$ggs-color: hsla(134, 27, 27%, 1);
 $gray: hsla(0,0,91%,1);
 $light-gray: hsla(0,0,60%,1);
 $white: hsla(0,0,100%,1);
