--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,48 +19,53 @@ title: Timothy Voice
   </div>
 </div>
 
-<div class="projects-band">
-  <div class="row projects">
-    <div class="small-12 medium-12 large-12 columns projects-container">
-      <h2 class="projects-title"></h2>
+
     
-      <div class="projects-single">
-        <div class="projects-single-container clearfix">
-          <div class="show-for-medium-up medium-4 large-4 columns projects-summary">
-            <h3 class="projects-single-title">
-              Great Green Sources
-            </h3>
-            <p class="projects-single-teaser">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, molestias, error dicta earum sed ipsum velit blanditiis provident eveniet et.
-            </p>
-            <%= link_to 'View Project', '/ggs.html', :relative => true, :class => "small secondary button" %>
-          </div><!-- projects-summary -->
-          <div class="small-12 medium-8 large-8 columns">
-            <%= image_tag 'greatgreensources_full_mockup.png'  %> 
+    <div class="projects-ggs-band clearfix">
+      <div class="small-12 medium-12 large-12 columns projects-ggs-container">
+        <div class="row projects-ggs">
+          <div class="projects-single">
+            <div class="projects-single-container clearfix">
+              <div class="show-for-medium-up medium-4 large-4 columns projects-summary">
+                <h3 class="projects-single-title">
+                  Great Green Sources
+                </h3>
+                <p class="projects-single-teaser">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, molestias, error dicta earum sed ipsum velit blanditiis provident eveniet et.
+                </p>
+                <%= link_to 'View Project', '/ggs.html', :relative => true, :class => "small secondary button" %>
+              </div><!-- projects-summary -->
+              <div class="small-12 medium-8 large-8 columns">
+                <%= image_tag 'greatgreensources_full_mockup.png'  %> 
+              </div>
+            </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="projects-single">
-        <div class="projects-single-container clearfix">
-          <div class="show-for-medium-up medium-4 large-4 columns projects-summary">
-            <h3 class="projects-single-title">
-              Octave Journal
-            </h3>
-            <p class="projects-single-teaser">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, molestias, error dicta earum sed ipsum velit blanditiis provident eveniet et.
-            </p>
-            <a href="#" class="small secondary button">View Project</a>
-          </div><!-- projects-summary -->
-          <div class="small-12 medium-8 large-8 columns">
-            <%= image_tag 'octavejournal_full_mockup.png'  %> 
+    <div class="projects-octavejournal-band clearfix">
+      <div class="small-12 medium-12 large-12 columns projects-octavejournal-container">
+        <div class="row projects-octavejournal">
+          <div class="projects-single">
+            <div class="projects-single-container clearfix">
+              <div class="show-for-medium-up medium-4 large-4 columns projects-summary">
+                <h3 class="projects-single-title">
+                  Octave Journal
+                </h3>
+                <p class="projects-single-teaser">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, molestias, error dicta earum sed ipsum velit blanditiis provident eveniet et.
+                </p>
+                <%= link_to 'View Project', '/ggs.html', :relative => true, :class => "small secondary button" %>
+              </div><!-- projects-summary -->
+              <div class="small-12 medium-8 large-8 columns">
+                <%= image_tag 'octavejournal_full_mockup.png'  %> 
+              </div>
+            </div>
           </div>
         </div>
       </div>
-
-    </div><!-- projects -->
-  </div>
-</div>
+    </div>
 
 <div class="row">
   <div class="small-12 medium-12 large-12 columns about">
