--- a/source/stylesheets/modules/_variables.scss
+++ b/source/stylesheets/modules/_variables.scss
@@ -28,7 +28,7 @@
 ============================ */
 
 $branding-color: hsla(202, 89, 58%, 1);
-// $branding-color: hsla(209, 32, 59%, 1);
+// $white: hsla(209, 32, 59%, 1);
 $octavejournal-color: hsla(229, 43, 39%, 1);
 $ggs-color: hsla(134, 27, 27%, 1);
 $gray: hsla(0,0,91%,1);
@@ -59,7 +59,7 @@ $underline: 0.0625rem dotted;
 ============================ */
 
 $border-thick: 0.125rem $black solid;
-$border-thin:  0.125rem $black solid;
+$border-thin:  0.125rem $light-gray solid;
 
 /* ============================ 
 	Backgrounds
