preparing for Heroku deployment

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -22,7 +22,7 @@ title: Timothy Voice
 
     
     <div class="projects-ggs-band clearfix">
-      <div class="small-12 medium-12 large-12 columns projects-ggs-container">
+      <div class="small-12 medium-12 large-12 columns projects-container ggs">
         <div class="row projects-ggs">
           <div class="projects-single">
             <div class="projects-single-container clearfix">
@@ -35,8 +35,8 @@ title: Timothy Voice
                 </p>
                 <%= link_to 'View Project', '/ggs.html', :relative => true, :class => "small secondary button" %>
               </div><!-- projects-summary -->
-              <div class="small-12 medium-8 large-8 columns">
-                <%= image_tag 'greatgreensources_full_mockup.png'  %> 
+              <div class="small-12 medium-8 large-8 columns projects-single-image">
+                <%= image_tag 'greatgreensources_color_mockup.png'  %> 
               </div>
             </div>
           </div>
@@ -45,7 +45,7 @@ title: Timothy Voice
     </div>
 
     <div class="projects-octavejournal-band clearfix">
-      <div class="small-12 medium-12 large-12 columns projects-octavejournal-container">
+      <div class="small-12 medium-12 large-12 columns projects-container octavejournal">
         <div class="row projects-octavejournal">
           <div class="projects-single">
             <div class="projects-single-container clearfix">
@@ -58,8 +58,8 @@ title: Timothy Voice
                 </p>
                 <%= link_to 'View Project', '/ggs.html', :relative => true, :class => "small secondary button" %>
               </div><!-- projects-summary -->
-              <div class="small-12 medium-8 large-8 columns">
-                <%= image_tag 'octavejournal_full_mockup.png'  %> 
+              <div class="small-12 medium-8 large-8 columns projects-single-image">
+                <%= image_tag 'octavejournal_color_mockup.png'  %> 
               </div>
             </div>
           </div>
