--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -24,6 +24,7 @@
 @import "partials/navigation";
 @import "partials/login";
 @import "partials/buttons";
+@import "partials/images";
  
 
 // Or selectively include components
