- fiddling with headroom.js

--- a/source/_about.erb
+++ b/source/_about.erb
@@ -1,4 +1,4 @@
-<div class="about-band">
+<div id="about" class="about-band">
   <div class="row">
     <div class="small-12 medium-12 large-12 columns about">
       <div class="small-12 medium-6 large-6 columns about-intro alpha">
