--- a/source/stylesheets/partials/_base.scss
+++ b/source/stylesheets/partials/_base.scss
@@ -49,7 +49,7 @@ hr {
     left:0; 
     right:0; 
     bottom:0; 
-    background-color: $white; 
+    background-color: $branding-color; 
     z-index:99;
 }
 
