--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,12 +8,14 @@ title: Timothy Voice
   <div class="row">
     <div id="splash" class="small-12 medium-12 large-12 columns branding">
       <div class="fixer">
+        <div class="branding-intro small-12 medium-6 large-4 columns">
         <h1 class="branding-title">
-        Timothy <br> <span class="indent">Voice</span>
-      </h1>
-      <p class="branding-byline">
-        concept code content
-      </p>
+          Timothy Voice
+        </h1>
+        <p class="branding-byline">
+          concept code content
+        </p>
+      </div><!-- branding-intro -->
       </div>
     </div><!-- Branding -->
   </div>
@@ -56,7 +58,7 @@ title: Timothy Voice
                 <p class="projects-single-teaser">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, molestias, error dicta earum sed ipsum velit blanditiis provident eveniet et.
                 </p>
-                <%= link_to 'View Project', '/ggs.html', :relative => true, :class => "small secondary button" %>
+                <%= link_to 'View Project', '/octavejournal.html', :relative => true, :class => "small secondary button" %>
               </div><!-- projects-summary -->
               <div class="small-12 medium-8 large-8 columns projects-single-image">
                 <%= image_tag 'octavejournal_color_mockup.png'  %> 
