--- a/source/_navigation.erb
+++ b/source/_navigation.erb
@@ -10,6 +10,21 @@
     <section class="top-bar-section">
       <!-- Right Nav Section -->
       <ul class="right">
+    <li>
+      <a href="#">
+        <i class="ion-social-github"></i>      
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <i class="ion-social-twitter"></i>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <i class="ion-ios7-email"></i>
+      </a>
+    </li>
     <li><a href="#">projects</a></li>
     <li><a href="#">about</a></li>
     <li class="divider"></li>
@@ -18,15 +33,7 @@
   
       <!-- Left Nav Section -->
       <ul class="left">
-        <li><a href="#">
-          <i class="ion-social-github"></i>      
-        </a></li>
-        <li><a href="#">
-          <i class="ion-social-twitter"></i>
-        </a></li>
-        <li><a href="#">
-          <i class="ion-ios7-email"></i>
-        </a></li>
+        
       
       </ul>
     </section>
