--- a/source/layouts/project.erb
+++ b/source/layouts/project.erb
@@ -17,7 +17,7 @@
 
     <%= yield %>
 
-    <%= javascript_include_tag  "all", "app" %>
+    <%= javascript_include_tag  "all", "app", "headroom", "owlcarousel/owl-carousel/owl.carousel" %>
 
   </body>
 </html>
