--- a/source/octavejournal.html.erb
+++ b/source/octavejournal.html.erb
@@ -40,6 +40,7 @@ link:
 
 <div id="project-carousel" class="owl-carousel mockup">      
  
+  <div class="row">
     <div class="item">
         
         <div class="mockup-image small-12 columns">
@@ -58,6 +59,7 @@ link:
           </div>
         </div>
 
+  </div>
   </div>
 
 </div><!-- project-carousel-->
