refactored project pages

--- a/source/octavejournal.html.erb
+++ b/source/octavejournal.html.erb
@@ -19,6 +19,12 @@ source:
 
 link:
   - http://www.octavejournal.com
+
+images:
+  - octavejournal_full_mockup.png
+  - octavejournal_newsletter.png
+
+
 ---
 
 <div class="branding-band">
@@ -32,37 +38,27 @@ link:
         <p class="project-intro">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, natus libero sint aliquam officiis quis illo itaque fugiat harum voluptas optio ullam consectetur atque voluptatum laborum ratione mollitia accusantium consequatur doloribus praesentium? Assumenda eaque suscipit perferendis pariatur nemo rem quidem nulla veritatis blanditiis. Blanditiis aspernatur distinctio reiciendis. Sit, error vel.
         </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+        </div><!-- project-description -->
+      </div><!-- fixer -->
+    </div><!-- splash -->
+  </div><!-- row -->
+</div><!-- branding-band -->
 
 <div class="row">
   <div id="project-carousel" class="owl-carousel mockup">      
  
-  <div class="item">
-        
-        <div class="mockup-image small-12 columns">
-          <div class="small-12 medium-10 large-10 columns medium-centered">
-          <%= image_tag 'octavejournal_full_mockup.png'  %>
-          </div>
+    <% current_page.data.images.each do |f| %>
+    <div class="item">
+      <div class="mockup-image small-12 columns">
+        <div class="small-12 medium-10 large-10 columns medium-centered">
+          <%= image_tag f  %>
         </div>
+      </div><!-- mockup-image -->
+    </div><!-- item -->
+    <% end %>
 
-  </div>
-
-  <div class="item">
-        
-        <div class="mockup-image small-12 columns">
-          <div class="small-12 medium-10 large-10 columns medium-centered">
-          <%= image_tag 'octavejournal_newsletter.png'  %>  
-          </div>
-        </div>
-
-  </div>
-
-</div><!-- project-carousel-->
-</div>
+  </div><!-- project-carousel-->
+</div><!-- row -->
 
 
 <div class="detail">
@@ -92,9 +88,6 @@ link:
         <p class="detail-notes">* note you will need credentials to access this site
           <br> username: guest <br> password: guest</p>
       </div>
-    </div>
-    </div>
-  </div>
-
-  </div>
-  </div>
+    </div><!-- detail-container -->
+  </div><!-- row -->
+</div><!-- detail -->
