--- a/source/ggs.html.erb
+++ b/source/ggs.html.erb
@@ -18,6 +18,9 @@ source:
 link:
   - #
 
+images: 
+  - 'greatgreensources_color_mockup.png'
+
 ---
 
 <div class="branding-band">
@@ -31,45 +34,38 @@ link:
         <p class="project-intro">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, natus libero sint aliquam officiis quis illo itaque fugiat harum voluptas optio ullam consectetur atque voluptatum laborum ratione mollitia accusantium consequatur doloribus praesentium? Assumenda eaque suscipit perferendis pariatur nemo rem quidem nulla veritatis blanditiis. Blanditiis aspernatur distinctio reiciendis. Sit, error vel.
         </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-  
-<div class="mockup">
-    <div class="row">
+        </div><!-- project-description -->
+      </div><!-- fixer -->
+    </div><!-- splash -->
+  </div><!-- row -->
+</div><!-- branding-band -->
+
+<div class="row">
+  <div id="project-carousel" class="owl-carousel mockup">      
+ 
+    <% current_page.data.images.each do |f| %>
+    <div class="item">
       <div class="mockup-image small-12 columns">
         <div class="small-12 medium-10 large-10 columns medium-centered">
-        <%= image_tag 'greatgreensources_full_mockup.png'  %> 
+          <%= image_tag f  %>
         </div>
-      </div>
-    </div>
-  </div>  
+      </div><!-- mockup-image -->
+    </div><!-- item -->
+    <% end %>
 
-  <!-- <div class="detail">
-    <div class="row">
-      <div class="small-12 columns detail-container">
-        <div class="small-12 medium-5 large-5 columns detail-text">
-        <%= image_tag 'greatgreensources_fullpage_old.png'  %>           
-        </div>
-        <div class="small-12 medium-5 large-5 columns detail-text">
-        <%= image_tag 'greatgreensources_fullpage.png'  %>           
-        </div>
-      </div>
-      </div>
-    </div>
-  </div> -->
+  </div><!-- project-carousel-->
+</div><!-- row -->
 
-  <div class="detail">
-    <div class="row">
-      <div class="small-12 columns detail-container">
-        <div class="small-12 medium-5 large-5 columns alpha">
-          <p class="detail-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, pariatur, quod doloribus repellat neque ullam placeat magni cum inventore nostrum dignissimos atque nesciunt perferendis? Veniam, odit, rem, nemo obcaecati autem a laudantium atque quis illum vitae minima eaque cupiditate explicabo qui optio libero tenetur debitis fugit suscipit modi. Ipsam, vitae?
-          </p>
-        </div>
-        <div class="small-12 medium-5 large-5 columns detail-tech alpha">
+
+<div class="detail">
+  <div class="row">
+    <div class="small-12 columns detail-container">
+      <div class="small-12 medium-5 large-5 columns alpha">
+        <p class="detail-text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, pariatur, quod doloribus repellat neque ullam placeat magni cum inventore nostrum dignissimos atque nesciunt perferendis? Veniam, odit, rem, nemo obcaecati autem a laudantium atque quis illum vitae minima eaque cupiditate explicabo qui optio libero tenetur debitis fugit suscipit modi. Ipsam, vitae?
+        </p>
+      </div>
+      <div class="small-12 medium-5 large-5 columns detail-tech alpha">
         <% current_page.data.phases.each do |f| %>
           <p class="detail-tech-phases"><%= f %></p>
           <% end %>
@@ -85,9 +81,9 @@ link:
         <% current_page.data.link.each do |f| %>
           <div class="small button secondary inactive">Under Construction</div>
         <% end %>
-        
+        <p class="detail-notes">* note you will need credentials to access this site
+          <br> username: guest <br> password: guest</p>
       </div>
-      </div>
-      </div>
-    </div>
-  </div>
+    </div><!-- detail-container -->
+  </div><!-- row -->
+</div><!-- detail -->
